[WIP] Add loader program to the packed file

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,9 @@ all:
 	$(CC) -o hello hello.c
 
 run: all
-	./hello
+	../woody_woodpacker empty
+	../woody_woodpacker putc
+	../woody_woodpacker hello
 
 clean:
 	$(RM) empty putc hello
