Generate the loader data header file from the loader binary file.

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,8 +5,30 @@ all:
 
 run: all
 	../woody_woodpacker empty
+	./empty.packed
+	@rm empty.packed
+	@echo "---------------------------------------"
 	../woody_woodpacker putc
+	./putc.packed
+	@rm putc.packed
+	@echo "---------------------------------------"
 	../woody_woodpacker hello
+	./hello.packed
+	@rm hello.packed
+	@echo "---------------------------------------"
+	../woody_woodpacker ../woody_woodpacker
+	../woody_woodpacker.packed empty
+	./empty.packed
+	@rm empty.packed
+	@echo "---------------------------------------"
+	../woody_woodpacker.packed putc
+	./putc.packed
+	@rm putc.packed
+	@echo "---------------------------------------"
+	../woody_woodpacker.packed hello
+	./hello.packed
+	@rm hello.packed
+	@echo "---------------------------------------"
 
 clean:
 	$(RM) empty putc hello
